# rayca-geometry

./: Cargo.toml  README.md
src/: lib.rs  line.rs  sphere.rs  triangle.rs  vertex.rs
